solr wrap fix

--- a/gudmap/WebContent/resources/css/v2/gudmap_db_v2.css
+++ b/gudmap/WebContent/resources/css/v2/gudmap_db_v2.css
@@ -474,6 +474,10 @@
     padding: 5px ;
 }
 
+#db_form_wrapper {
+	overflow:auto;
+}
+
  
  /***************************** ISH expression bars *******************************/
  
